--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -56,7 +56,6 @@
 	    position: relative;
 	    display: block;
 	    width: 100%;
-	    /*height: 1100px;*/
 	    margin: 2em auto;
 
 			section {
@@ -64,13 +63,10 @@
 			    display: block;
 			    top: 1.8em;
 			    left: 0;
-			    /*height: 1100px;*/
 			    width: 100%;
 			    max-width: 100%;
 			    box-sizing: border-box;
 			    padding: 10px 20px;
-			    /*background-color: #ddd;*/
-			    /* border-radius: 5px; */
 			    z-index: 0;
 					&.sel-tab {
 					    position: relative;
@@ -149,7 +145,6 @@
 		}
 		.quota-remaining
 		{
-			 //float: right;
 			font-size: 13px;
 		}
 	    .spio-status-box {
@@ -167,7 +162,6 @@
 			flex: 4 2 auto;
 			min-width: 100px;
 			display: inline-block;
-//			flex-grow: 2;
 		}
 		div.sp-bulk-summary {
 
@@ -176,7 +170,6 @@
 				.opt-circle-average {
 						width: 100px;
 						height: 100px;
-					 // margin-right: 35px;
 						.trail {
 							stroke: #ddd;
 						}
@@ -275,7 +268,6 @@
 				margin-left: 20px;
 			}
 
-
 				.toggleTarget
 				{
 					 display: none;
@@ -314,7 +306,6 @@
 		{
 			width: 140px;
 		}
-      /* border-radius: 5px 5px 0 0; */
       a {
           display: block;
           width: 100%;
@@ -369,7 +360,6 @@
 	article.sp-tabs section#tab-debug {
 
 	}
-  //article.sp-tabs section h2
 
   section#tab-debug
   {
@@ -489,7 +479,6 @@
     }
   }
 
-
   .view-notice-row
   {
     display: none;
@@ -505,7 +494,6 @@
 						 line-height: 22px;
 					}
 					.shortpixel-compression-options {
-	//		    	color: #999;
 						display: inline-block;
 				}
 				label {
@@ -514,6 +502,7 @@
 				    background-color:$color-light;
 				    font-weight: bold;
 				    display: inline-block;
+						cursor: pointer;
 						span {
 						    text-align:center;
 						    font-size: 16px;
