--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -43,7 +43,6 @@
   position: relative;
   display: block;
   width: 100%;
-  /*height: 1100px;*/
   margin: 2em auto;
 }
 .wrap.is-shortpixel-settings-page article.sp-tabs section {
@@ -51,13 +50,10 @@
   display: block;
   top: 1.8em;
   left: 0;
-  /*height: 1100px;*/
   width: 100%;
   max-width: 100%;
   box-sizing: border-box;
   padding: 10px 20px;
-  /*background-color: #ddd;*/
-  /* border-radius: 5px; */
   z-index: 0;
 }
 .wrap.is-shortpixel-settings-page article.sp-tabs section.sel-tab {
@@ -247,7 +243,6 @@
   margin: 0;
   color: #999;
   background-color: #ddd;
-  /* border-radius: 5px 5px 0 0; */
 }
 @media (max-width: 991px) {
   .wrap.is-shortpixel-settings-page article.sp-tabs section h2 {
@@ -413,6 +408,7 @@
   background-color: #d1f5fd;
   font-weight: bold;
   display: inline-block;
+  cursor: pointer;
 }
 .wrap.is-shortpixel-settings-page #tab-settings .shortpixel-compression label span {
   text-align: center;
