--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -423,6 +423,46 @@
   background-color: #0f6a7d;
   color: #FFF;
 }
+.wrap.is-shortpixel-settings-page #tab-settings .presentation-wrap {
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  width: 600px;
+}
+.wrap.is-shortpixel-settings-page #tab-settings .presentation-wrap img {
+  margin: auto;
+}
+@media (max-width: 1280px) {
+  .wrap.is-shortpixel-settings-page #tab-settings .presentation-wrap {
+    width: 460px;
+  }
+}
+@media (max-width: 1140px) {
+  .wrap.is-shortpixel-settings-page #tab-settings .presentation-wrap {
+    width: 320px;
+  }
+}
+.wrap.is-shortpixel-settings-page #tab-settings .spai-resize-frame {
+  position: absolute;
+  border: 2px dashed #fd1d1d;
+}
+.wrap.is-shortpixel-settings-page #tab-settings .spai-resize-frame:after {
+  font-size: 10px;
+  font-weight: bold;
+  position: absolute;
+  bottom: -15px;
+  right: 0;
+  color: red;
+}
+.wrap.is-shortpixel-settings-page #tab-settings .resize-options-wrap {
+  margin: 10px 20px 0 20px;
+  float: left;
+}
+.wrap.is-shortpixel-settings-page #tab-settings .resize-type-wrap label {
+  display: inline-block;
+  padding: 15px 0 0 0;
+}
 
 /* Specific styles for advanced settings tab */
 #shortpixel-settings-tabs #tab-adv-settings .excludeSizeOption {
@@ -706,19 +746,20 @@ setting name {
 setting content {
   padding: 15px 10px;
   flex-basis: calc(100% - 250px);
+  font-size: 14px;
 }
 setting info {
   display: block;
   padding-top: 0px;
   color: #818181;
-  font-size: 13px !important;
+  font-size: 13px;
   margin: 6px 0;
 }
 setting warning {
   border-left: 4px solid #ffb900;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   padding: 8px;
-  margin-left: 230px;
+  margin: 4px 0 12px 230px;
   flex-basis: 100%;
   display: none;
 }
