--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -674,15 +674,22 @@ i.documentation {
 }
 
 div.spio-modal-shade {
-  position: fixed; /* Stay in place */
-  z-index: 10; /* Sit on top - zindex wars  */
+  position: fixed;
+  /* Stay in place */
+  z-index: 10;
+  /* Sit on top - zindex wars  */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 
 div.spio-modal {
@@ -693,10 +700,13 @@ div.spio-modal {
   background-position: center;
   padding: 20px 16px 16px;
   border: 1px solid #888;
-  width: 40%; /* Could be more or less, depending on screen size */
+  width: 40%;
+  /* Could be more or less, depending on screen size */
   max-width: 100%;
-  min-width: 300px; /* Could be more or less, depending on screen size */
-  z-index: 100; /* Proper z-index */
+  min-width: 300px;
+  /* Could be more or less, depending on screen size */
+  z-index: 100;
+  /* Proper z-index */
   position: fixed;
   top: 10%;
   left: 30%;
@@ -755,7 +765,7 @@ setting info {
   font-size: 13px;
   margin: 6px 0;
 }
-setting warning {
+setting warning, setting error {
   border-left: 4px solid #ffb900;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   padding: 8px;
@@ -763,16 +773,19 @@ setting warning {
   flex-basis: 100%;
   display: none;
 }
-setting warning h4 {
+setting warning h4, setting error h4 {
   margin: 0;
   font-size: 16px;
 }
-setting warning p {
+setting warning p, setting error p {
   color: #333;
   font-size: 13px;
 }
-setting warning.display {
+setting warning.display, setting error.display {
   display: block;
+}
+setting error {
+  border-left-color: #ff0000;
 }
 
 settinggrid {
