--- a/res/scss/elements/_setting.scss
+++ b/res/scss/elements/_setting.scss
@@ -32,7 +32,7 @@ setting{
      margin: 6px 0;
   }
 
-  warning {
+  warning, error {
       border-left: 4px solid #ffb900;
       box-shadow: 0 1px 1px 0 rgba( 0, 0, 0, 0.1 );
       padding: 8px;
@@ -54,6 +54,9 @@ setting{
           display: block;
       }
   }
+	error {
+		 border-left-color: #ff0000;
+	}
 
 } // setting
 
