--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -463,6 +463,9 @@
   display: inline-block;
   padding: 15px 0 0 0;
 }
+.wrap.is-shortpixel-settings-page #tab-settings input[name=resizeWidth], .wrap.is-shortpixel-settings-page #tab-settings input[name=resizeHeight] {
+  width: 80px;
+}
 
 /* Specific styles for advanced settings tab */
 #shortpixel-settings-tabs #tab-adv-settings .excludeSizeOption {
@@ -477,6 +480,7 @@
 }
 #shortpixel-settings-tabs #tab-adv-settings .deliverWebpTypes, #shortpixel-settings-tabs #tab-adv-settings .deliverWebpAlteringTypes {
   margin: 16px 0 16px 16px;
+  padding: 2px;
 }
 #shortpixel-settings-tabs #tab-adv-settings .new-exclusion-button {
   float: left;
@@ -674,22 +678,15 @@ i.documentation {
 }
 
 div.spio-modal-shade {
-  position: fixed;
-  /* Stay in place */
-  z-index: 10;
-  /* Sit on top - zindex wars  */
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top - zindex wars  */
   left: 0;
   top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 div.spio-modal {
@@ -700,13 +697,10 @@ div.spio-modal {
   background-position: center;
   padding: 20px 16px 16px;
   border: 1px solid #888;
-  width: 40%;
-  /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
   max-width: 100%;
-  min-width: 300px;
-  /* Could be more or less, depending on screen size */
-  z-index: 100;
-  /* Proper z-index */
+  min-width: 300px; /* Could be more or less, depending on screen size */
+  z-index: 100; /* Proper z-index */
   position: fixed;
   top: 10%;
   left: 30%;
@@ -781,8 +775,8 @@ setting warning p, setting error p {
   color: #333;
   font-size: 13px;
 }
-setting warning.display, setting error.display {
-  display: block;
+setting warning.is-visible, setting error.is-visible {
+  display: inline-block;
 }
 setting error {
   border-left-color: #ff0000;
