--- a/res/scss/view/_settings-advanced.scss
+++ b/res/scss/view/_settings-advanced.scss
@@ -14,6 +14,7 @@
 
 	.deliverWebpTypes, .deliverWebpAlteringTypes {
     margin: 16px 0 16px 16px;
+		padding: 2px; // allow to full draw of checkbox
 	}
 
 	.new-exclusion-button {
