--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -312,7 +312,7 @@ div.shortpixel-modal button.sp-close-button, div.shortpixel-modal button.sp-clos
   border: none;
   font-size: 22px;
   line-height: 10px;
-  color: #000;
+  color: #000 !important;
   cursor: pointer;
 }
 div.shortpixel-modal .sptw-modal-spinner {
@@ -323,10 +323,26 @@ div.shortpixel-modal .sptw-modal-spinner {
 
 div.sp-modal-title {
   font-size: 22px;
+  color: #3c434a;
+  text-transform: none;
+  font-weight: 400;
 }
 
 div.sp-modal-body {
   margin-top: 10px;
+}
+
+#ngg_page_content .sp-modal-title button {
+  float: right;
+  margin-top: 0px;
+  background: transparent !important;
+  border: none;
+  font-size: 22px;
+  line-height: 10px;
+  color: #000 !important;
+  cursor: pointer;
+  height: auto !important;
+  padding: 0 !important;
 }
 
 body.debug-model-active {
