--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -769,6 +769,8 @@ setting warning, setting error {
   margin: 4px 0 12px 230px;
   flex-basis: 100%;
   display: none;
+  opacity: 0;
+  transition: opacity 300ms;
 }
 setting warning h4, setting error h4 {
   margin: 0;
