--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -1,4 +1,5 @@
 
+@import 'view/settings-structure';
 @import 'view/settings';
 @import 'view/settings-advanced';
 @import 'view/settings-cloudflare';
