--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -1,6 +1,7 @@
 .shortpixel-settings {
   width: 100%;
   display: flex;
+  background: #fff;
 }
 .shortpixel-settings menu {
   width: 30%;
@@ -10,20 +11,44 @@
   list-style: none;
 }
 .shortpixel-settings menu ul li {
-  padding: 12px 8px;
   border: 1px solid #ccc;
   margin: 12px 0;
   text-align: center;
 }
 .shortpixel-settings menu ul li a {
+  padding: 12px 8px;
   font-size: 14px;
   font-weight: 700;
   color: #000;
   text-decoration: none;
+  display: inline-block;
+  width: 100%;
+}
+.shortpixel-settings menu ul li.active {
+  background: #0f6a7d;
+}
+.shortpixel-settings menu ul li.active a {
+  color: #fff;
 }
 .shortpixel-settings section.wrapper {
   width: 65%;
   margin-left: 5%;
+}
+.shortpixel-settings section.wrapper .setting-tab {
+  color: #333;
+  z-index: 2;
+}
+.shortpixel-settings section.wrapper .setting-tab.sel-tab {
+  position: relative;
+}
+.shortpixel-settings section.wrapper .setting-tab.sel-tab .wp-shortpixel-tab-content {
+  visibility: visible !important;
+}
+.shortpixel-settings section.wrapper .setting-tab settinglist h2 {
+  font-size: 24px;
+  outline: 0;
+  text-decoration: none;
+  color: #0f6a7d;
 }
 
 .wrap.is-shortpixel-settings-page {
@@ -706,22 +731,15 @@ i.documentation {
 }
 
 div.spio-modal-shade {
-  position: fixed;
-  /* Stay in place */
-  z-index: 10;
-  /* Sit on top - zindex wars  */
+  position: fixed; /* Stay in place */
+  z-index: 10; /* Sit on top - zindex wars  */
   left: 0;
   top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 div.spio-modal {
@@ -732,13 +750,10 @@ div.spio-modal {
   background-position: center;
   padding: 20px 16px 16px;
   border: 1px solid #888;
-  width: 40%;
-  /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
   max-width: 100%;
-  min-width: 300px;
-  /* Could be more or less, depending on screen size */
-  z-index: 100;
-  /* Proper z-index */
+  min-width: 300px; /* Could be more or less, depending on screen size */
+  z-index: 100; /* Proper z-index */
   position: fixed;
   top: 10%;
   left: 30%;
