--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -1,9 +1,11 @@
 
+@import 'view/settings-fonts';
 @import 'view/settings-structure';
 @import 'view/settings';
 @import 'view/settings-advanced';
 @import 'view/settings-cloudflare';
 @import 'view/settings-tools';
 @import 'view/inline-help';
+@import 'view/settings-icons';
 
 @import 'elements/setting';
