--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -2,6 +2,7 @@
 @import 'view/settings-fonts';
 @import 'view/settings-structure';
 @import 'view/settings';
+@import 'view/settings-overview';
 @import 'view/settings-advanced';
 @import 'view/settings-cloudflare';
 @import 'view/settings-tools';
