--- a/res/scss/view/_settings-icons.scss
+++ b/res/scss/view/_settings-icons.scss
@@ -1,24 +1,54 @@
 
 $icon-path: '../images/icon/';
+$illustration-path: '../images/illustration';
 
 $default:  'default.svg';
 $disabled:  'disabled.svg';
 $selected: 'selected.svg';
 
 
-$icons: cdn, dashboard, debug, delivery, feedback, help, image_optimization, image_processing, notifications, tools, webp_avif;
+$icons: cdn, dashboard, debug, delivery, feedback, help, image_optimization, image_processing, notifications, tools, webp_avif, photo, box-archive, bulk, ok, arrow-right, key, save, switch;
+
+.shortpixel-icon
+{
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  //https://angel-rs.github.io/css-color-filter-generator/
+//  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(199deg) brightness(105%) contrast(101%);
+  line-height: 25px;
+  vertical-align: middle;
+  margin-right: 4px;
+
+}
 
 @each $icon in $icons {
 
-  .shortpixel-icon-#{$icon} {
-    background-image: url($icon-path + $icon + '/default.svg');
-    width: 25px;
-    height: 25px;
-    display: inline-block;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(199deg) brightness(105%) contrast(101%);
-    line-height: 25px;
-    vertical-align: middle;
+  .shortpixel-icon.#{$icon} {
+    background-image: url($icon-path + $icon + '.svg');
+  }
+}
+
+.shortpixel-illustration
+{
+
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+
+  &.wizzard-done
+  {
+      background-image: url($illustration-path + '/wizzard-done.svg');
+      width: 70px;
+      height: 70px;
+
+  }
+  &.cocktail {
+    background-image: url($illustration-path + '/cocktail.svg');
+    height: 104px;
   }
 }
