--- a/res/scss/view/_settings-structure.scss
+++ b/res/scss/view/_settings-structure.scss
@@ -13,6 +13,7 @@
 			display: flex;
 			padding: 8px 16px;
 			justify-content: space-between;
+			align-items: center;
 
 			h1 {
 				line-height: 50px;
@@ -28,12 +29,22 @@
 	button {
 			color: #fff;
 			background: #1ABDCA;
-			padding: 10px 6px;
+			padding: 8px 6px;
 			border: 0;
 			margin: 4px; // see if this works.
 			font-family: 'Roboto';
 			font-weight: 700;
-
+			border-radius: 6px;
+			i.switch {
+				 width: 18px;
+				 height: 12px;
+			}
+			i.notifications
+			{
+				 width: 14px;
+				 height: 14px;
+				 filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(251deg) brightness(108%) contrast(108%);;
+			}
 
 	//		text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 
@@ -42,26 +53,28 @@
 
 }
 
-.shortpixel-settings // main wrapper. Items for settings minus header.
+.shortpixel-settings // main article wrapper. Items for settings minus header.
 {
-	  width: 100%;
+	  width: 95%;
 		display: flex;
 		background: #fff;
+		border-radius: 16px;
+		margin: 0 auto;
 
 
 		menu { // left-hand menu.
-			 width: 30%;
-			 max-width: 300px;
+			 width: 25%;
+			 max-width: 200px;
 
 			 ul {
 				  list-style: none;
 					li {
-						border: 1px solid #ccc;
-						margin: 12px 0;
-						text-align: center;
+					//	border: 1px solid #ccc;
+						margin: 4px 0;
+						text-align: left;
 
 							a {
-								padding: 12px 8px;
+								padding: 6px 4px;
 
 								font-size: 14px;
 								font-weight: 700;
@@ -72,7 +85,7 @@
 								box-sizing: border-box;
 
 								i {
-									margin-right: 6px;
+									margin-right: 8px;
 									width: 16px;
 									height: 16px;
 									filter: none;
@@ -80,7 +93,9 @@
 								&.active {
 									 background: #0f6a7d;
 							 	  color: #fff;
-
+									i {
+										filter: brightness(0) saturate(100%) invert(100%) sepia(92%) saturate(270%) hue-rotate(177deg) brightness(122%) contrast(100%);
+									}
 								}
 							}
 
@@ -91,7 +106,9 @@
 		section.wrapper // wrapper of the settings tab.
 		{
 			 width: calc(100% - 30% - 5%);
-			 margin-left: 5%;
+//			 margin-left: 5%;
+//			 margin-top: 25px;
+			 margin: 25px 0 25px 5%;
 
 			 .setting-tab
 			 {
@@ -113,5 +130,10 @@
 						}
 					} // settinglist
 				}
+		} // section.wrapper
+		settinglist
+		{
+			 display: block;
+
 		}
 } // shortpixel-settings
