--- a/res/scss/view/_settings-structure.scss
+++ b/res/scss/view/_settings-structure.scss
@@ -3,6 +3,13 @@
 .wrap.is-shortpixel-settings-page
 {
 
+	&.simple
+	{
+		 .is-advanced
+		 {
+			  display: none;
+		 }
+	}
 
 	// The Header
 	header
