--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -1,6 +1,7 @@
 
 @import 'view/settings-fonts';
 @import 'view/settings-structure';
+@import 'view/settings-optimisation'; 
 @import 'view/settings';
 @import 'view/settings-overview';
 @import 'view/settings-advanced';
