--- a/res/scss/view/_settings-structure.scss
+++ b/res/scss/view/_settings-structure.scss
@@ -131,9 +131,16 @@
 					{
 						h2 { // title
 							 font-size: 24px;
+							 font-family: 'Roboto';
+							 font-weight: 700;
 							 outline: 0;
 							 text-decoration: none;
 							 color: #0f6a7d;
+						}
+						h3 {
+							  font-size: 18px;
+								font-family: 'Roboto';
+								font-weight: 700; 
 						}
 					} // settinglist
 				}
